# rust-up

./: .gitignore  README.md
cargouse/: Cargo.toml
clap-up/: Cargo.toml
clap-up/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
collection/: Cargo.toml
collection/src/: main.rs
generic/: Cargo.toml
generic/src/: lib.rs  main.rs
hack_bot/: Cargo.toml
hack_bot/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
hightrait/: Cargo.toml
hightrait/src/: main.rs
imagepullsecret-sync/: Cargo.toml  README.md  registry_secrets.yaml
imagepullsecret-sync/src/: config.rs  worker.rs
ipsecret-sync/: Cargo.toml  registry_secrets.yaml
ipsecret-sync/src/: config.rs  main.rs  worker.rs
lists/: Cargo.toml
lists/src/: fifth.rs  fifth_bad.rs  first.rs  fourth.rs  lib.rs  second.rs  third.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
moduse/: Cargo.toml
moduse/src/: A.rs  lib.rs  main.rs
moduse/src/B/: C.rs  mod.rs
node-metrics/: Cargo.toml  build.rs  types.proto  types.protoset
node-metrics/src/: main.rs  types.rs  types_grpc.rs
ownership/: Cargo.toml
ownership/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
restaurant/src/front_of_house/: front_of_house.rs
smref/: Cargo.toml
smref/src/: main.rs
structer/: Cargo.toml
structer/src/: main.rs
threaduse/: Cargo.toml
threaduse/src/: main.rs
web/: Cargo.toml
web_api/: Cargo.toml
web_api/src/: main.rs
