[package]
name = "ipsecret-sync"
version = "0.1.0"
authors = ["yahaa <1477765176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.45.0"
kube-runtime = "0.45.0"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_17"] }
log = "0.4.11"
tokio = { version = "0.2.22", features = ["full"] }
env_logger = "0.7.1"
futures = "0.3.5"
serde_json = "1.0.57"
anyhow = "1.0.32"


