[package]
name = "node-metrics"
version = "0.1.0"
authors = ["yahaa <1477765176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.2.0"
protobuf = "2"
grpc = "0.8.2"
grpc-protobuf = "0.8.2"
futures = "0.3.*"
tls-api = "0.3.*"

[build-dependencies]
protoc-rust-grpc = "0.8.2"
